@@ -611,6 +611,8 @@ operator|!=
 literal|null
 condition|)
 block|{
+comment|// We reuse the same hashmap to reduce new object allocation.
+comment|// This means counts can be empty when there is no input data.
 name|state
 operator|.
 name|counts
@@ -640,6 +642,25 @@ operator|==
 literal|null
 condition|)
 block|{
+if|if
+condition|(
+name|percentile
+argument_list|<
+literal|0.0
+operator|||
+name|percentile
+argument_list|>
+literal|1.0
+condition|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Percentile value must be wihin the range of 0 to 1."
+argument_list|)
+throw|;
+block|}
 name|state
 operator|.
 name|percentiles
@@ -800,6 +821,15 @@ operator|.
 name|counts
 operator|==
 literal|null
+operator|||
+name|state
+operator|.
+name|counts
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
 condition|)
 block|{
 return|return
@@ -1014,6 +1044,8 @@ operator|!=
 literal|null
 condition|)
 block|{
+comment|// We reuse the same hashmap to reduce new object allocation.
+comment|// This means counts can be empty when there is no input data.
 name|state
 operator|.
 name|counts
@@ -1046,6 +1078,60 @@ operator|==
 literal|null
 condition|)
 block|{
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|percentiles
+operator|.
+name|size
+argument_list|()
+condition|;
+name|i
+operator|++
+control|)
+block|{
+if|if
+condition|(
+name|percentiles
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|get
+argument_list|()
+operator|<
+literal|0.0
+operator|||
+name|percentiles
+operator|.
+name|get
+argument_list|(
+name|i
+argument_list|)
+operator|.
+name|get
+argument_list|()
+operator|>
+literal|1.0
+condition|)
+block|{
+throw|throw
+operator|new
+name|RuntimeException
+argument_list|(
+literal|"Percentile value must be wihin the range of 0 to 1."
+argument_list|)
+throw|;
+block|}
+block|}
 name|state
 operator|.
 name|percentiles
@@ -1199,6 +1285,15 @@ operator|.
 name|counts
 operator|==
 literal|null
+operator|||
+name|state
+operator|.
+name|counts
+operator|.
+name|size
+argument_list|()
+operator|==
+literal|0
 condition|)
 block|{
 return|return
